<resources>
    <string name="app_name">All Crypto</string>
    <string name="symbols_template">%s / %s</string>
    <string name="last_update_template">Last Update: %s</string>
    <string name="slash">/</string>
    <string name="price_label">Price:</string>
    <string name="min_price_label">At least per day :</string>
    <string name="max_price_label">Daily maximum :</string>
    <string name="last_market_label">Last deal :</string>
    <string name="last_updated_label">Updated :</string>
    <string name="dollar"> $</string>
</resources>
