<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_details">

    <ImageView
        android:id="@+id/imageCoin"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFromSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/usd"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/tvSlash"
        app:layout_constraintEnd_toStartOf="@id/tvSlash"
        app:layout_constraintTop_toTopOf="@id/tvSlash" />

    <TextView
        android:id="@+id/tvSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/slash"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageCoin" />

    <TextView
        android:id="@+id/tvToSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/tvSlash"
        app:layout_constraintStart_toEndOf="@id/tvSlash"
        app:layout_constraintTop_toTopOf="@id/tvSlash"
        tools:text="USD" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/tvSlash">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tvPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:textStyle="bold"
                android:text="@string/price_label"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingTop="8dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tvPriceLabel"
                app:layout_constraintTop_toTopOf="parent"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tvPriceLabel" />

            <TextView
                android:id="@+id/tvMinPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:textStyle="bold"
                android:text="@string/min_price_label"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPriceLabel" />

            <TextView
                android:id="@+id/tvMinPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:paddingTop="8dp"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tvMinPriceLabel"
                app:layout_constraintTop_toBottomOf="@id/tvPriceLabel" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tvMinPriceLabel" />

            <TextView
                android:id="@+id/tvMaxPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:textStyle="bold"
                android:text="@string/max_price_label"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMinPriceLabel" />

            <TextView
                android:id="@+id/tvMaxPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:paddingTop="8dp"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tvMaxPriceLabel"
                app:layout_constraintTop_toBottomOf="@id/tvMinPriceLabel" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tvMaxPriceLabel" />

            <TextView
                android:id="@+id/tvLastMarketLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:text="@string/last_market_label"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMaxPriceLabel" />

            <TextView
                android:id="@+id/tvLastMarket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:paddingTop="8dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tvLastMarketLabel"
                app:layout_constraintTop_toBottomOf="@id/tvMaxPriceLabel" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/tvLastMarketLabel" />

            <TextView
                android:id="@+id/tvLastUpdateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:text="@string/last_updated_label"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLastMarketLabel" />

            <TextView
                android:id="@+id/lastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:paddingTop="8dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tvLastUpdateLabel"
                app:layout_constraintTop_toBottomOf="@id/tvLastMarket"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/png_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view" />
</androidx.constraintlayout.widget.ConstraintLayout>